bhushan: global settings, assigned customers

--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -15,7 +15,7 @@
                 <form [formGroup]="fillingForm">
                     <div class="row kt-margin-b-15">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">Partner Name</p>
+                            <p class="text-color form-label mandatory">Partner Name</p>
                         </div>
                         <div class="col-9">
                             <select name="" id="" class="form-control" formControlName="partnerId"
@@ -30,7 +30,7 @@
                     </div>
                     <div class="row kt-margin-b-15">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory"> Scheme Name</p>
+                            <p class="text-color form-label mandatory"> Scheme Name</p>
                         </div>
                         <div class="col-9">
                             <input type="test" class="form-control" formControlName="schemeName"
@@ -41,7 +41,7 @@
 
                     <div class="row kt-margin-b-10">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory"> Enter Amount</p>
+                            <p class="text-color form-label mandatory"> Enter Amount</p>
                         </div>
                         <div class="col-9">
                             <div class="row">
@@ -63,18 +63,18 @@
                     </div>
                     <div class="row kt-padding-t-15">
                         <div class="offset-3 col-3">
-                            <p class="text-color font-weight-bold">30 Days</p>
+                            <p class="text-color form-label">30 Days</p>
                         </div>
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">90 Days</p>
+                            <p class="text-color form-label">90 Days</p>
                         </div>
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">180 Days</p>
+                            <p class="text-color form-label">180 Days</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">
+                            <p class="text-color form-label mandatory">
                                 Rate of Interest <br>
                                 (% / Monthly)
                             </p>
@@ -95,18 +95,18 @@
                     </div>
                     <!-- <div class="row kt-padding-t-15">
                         <div class="offset-3 col-3">
-                            <p class="text-color font-weight-bold">30 Days</p>
+                            <p class="text-color form-label">30 Days</p>
                         </div>
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">90 Days</p>
+                            <p class="text-color form-label">90 Days</p>
                         </div>
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">180 Days</p>
+                            <p class="text-color form-label">180 Days</p>
                         </div>
                     </div> -->
                     <!-- <div class="row">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">
+                            <p class="text-color form-label mandatory">
                                 Rate of Interest <br>
                                 (% / Annually)
                             </p>
@@ -132,7 +132,7 @@
                 <form [formGroup]="csvForm">
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
-                            <label class="text-color font-weight-bold mandatory">Partner Name</label>
+                            <label class="text-color form-label mandatory">Partner Name</label>
                         </div>
                         <div class="col-9">
                             <select name="" id="" class="form-control" formControlName="partnerId"
@@ -147,7 +147,7 @@
                     </div>
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
-                            <label class="text-color font-weight-bold mandatory">Upload CSV</label>
+                            <label class="text-color form-label mandatory">Upload CSV</label>
                         </div>
                         <div class="col-9">
                             <div class="input-group mb-3"
